objects/dca_cnvrt_file__Convert_Attachments_to_Files_Log__c.object
<CustomObject>
    <fields>
        <fullName>dca_cnvrt_file__Detail__c</fullName>
        <label>Detail</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_file__Job_ID__c</fullName>
        <description>The Batchable or Queueable Job ID when this error occurred.</description>
        <inlineHelpText>The Batchable or Queueable Job ID when this error occurred.</inlineHelpText>
        <label>Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_file__Log_Time__c</fullName>
        <description>In List Views and Reports the standard CreatedDate and LastModifiedDate display only the "date" portion and not the "time". This formula field is workaround to to view the "date" and "time" together.</description>
        <formula>CreatedDate</formula>
        <label>Log Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_file__New_File_ID__c</fullName>
        <description>If the log message is about a specific conversion issue with a record then this is the new File ID.</description>
        <inlineHelpText>If the log message is about a specific conversion issue with a record then this is the new File ID.</inlineHelpText>
        <label>New File ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_file__Old_Attachment_ID__c</fullName>
        <description>If the log message is about a specific conversion issue with a record then this is the original Attachment ID.</description>
        <inlineHelpText>If the log message is about a specific conversion issue with a record then this is the original Attachment ID.</inlineHelpText>
        <label>Old Attachment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_file__Status__c</fullName>
        <description>Indicates the status of log message, whether an attachment was successfully converted or perhaps that it was skipped during conversion or that it failed conversion. The API values match conversion result enum value in apex code.</description>
        <inlineHelpText>Indicates the status of log message, whether an attachment was successfully converted or perhaps that it was skipped during conversion or that it failed conversion. The API values match conversion result enum value in apex code.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CONVERTED</fullName>
                    <default>true</default>
                    <label>Converted</label>
                </value>
                <value>
                    <fullName>SKIPPED</fullName>
                    <label>Skipped</label>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                    <label>Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dca_cnvrt_file__Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>When deployed as a managed package then users cannot see errors logged to the Debug Log. This object stores any errors and messages the Adminsitrator may need to know about when troubleshooting conversion issues. You may delete these records after you have reviewed them.</description>
    <label>Convert Attachments to Files Log</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Convert Attachments to Files Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>dca_cnvrt_file__All</fullName>
        <columns>NAME</columns>
        <columns>dca_cnvrt_file__Status__c</columns>
        <columns>dca_cnvrt_file__Summary__c</columns>
        <columns>dca_cnvrt_file__Detail__c</columns>
        <columns>dca_cnvrt_file__Log_Time__c</columns>
        <columns>dca_cnvrt_file__Old_Attachment_ID__c</columns>
        <columns>dca_cnvrt_file__New_File_ID__c</columns>
        <columns>dca_cnvrt_file__Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>dca_cnvrt_file__Converted</fullName>
        <columns>NAME</columns>
        <columns>dca_cnvrt_file__Status__c</columns>
        <columns>dca_cnvrt_file__Summary__c</columns>
        <columns>dca_cnvrt_file__Detail__c</columns>
        <columns>dca_cnvrt_file__Log_Time__c</columns>
        <columns>dca_cnvrt_file__Old_Attachment_ID__c</columns>
        <columns>dca_cnvrt_file__New_File_ID__c</columns>
        <columns>dca_cnvrt_file__Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dca_cnvrt_file__Status__c</field>
            <operation>equals</operation>
            <value>CONVERTED</value>
        </filters>
        <label>Converted</label>
    </listViews>
    <listViews>
        <fullName>dca_cnvrt_file__Error</fullName>
        <columns>NAME</columns>
        <columns>dca_cnvrt_file__Status__c</columns>
        <columns>dca_cnvrt_file__Summary__c</columns>
        <columns>dca_cnvrt_file__Detail__c</columns>
        <columns>dca_cnvrt_file__Log_Time__c</columns>
        <columns>dca_cnvrt_file__Old_Attachment_ID__c</columns>
        <columns>dca_cnvrt_file__New_File_ID__c</columns>
        <columns>dca_cnvrt_file__Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dca_cnvrt_file__Status__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <label>Error</label>
    </listViews>
    <listViews>
        <fullName>dca_cnvrt_file__Skipped</fullName>
        <columns>NAME</columns>
        <columns>dca_cnvrt_file__Status__c</columns>
        <columns>dca_cnvrt_file__Summary__c</columns>
        <columns>dca_cnvrt_file__Detail__c</columns>
        <columns>dca_cnvrt_file__Log_Time__c</columns>
        <columns>dca_cnvrt_file__Old_Attachment_ID__c</columns>
        <columns>dca_cnvrt_file__New_File_ID__c</columns>
        <columns>dca_cnvrt_file__Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dca_cnvrt_file__Status__c</field>
            <operation>equals</operation>
            <value>SKIPPED</value>
        </filters>
        <label>Skipped</label>
    </listViews>
</CustomObject>